--- a/tesim/www/views/home/home.html
+++ b/tesim/www/views/home/home.html
@@ -5,7 +5,7 @@
 		<div class="list card">
 			<div class="item item-divider">
 				<i class="icon ion-help questionLabel"></i>
-				{{questions.text}}
+				{{question.text}}
 			</div>
 
 			<div class="item item-text-wrap" ng-repeat="option in question.options"
@@ -19,7 +19,7 @@
 		<button class="button button-positive" ng-click="checkAnswer($event)" ng-if="answer">
 			Confirmar <i class="icon ion-play"></i>
 		</button>
-		<pre>{{questions|json}}</pre>
+		<!--<pre>{{questions|json}}</pre>-->
 	</div>
 
 	<!--
